# swift-bill

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  index.html  package-lock.json  package.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: release.yml  test-build.yml
crates/swift-bill-core/: Cargo.toml
crates/swift-bill-core/src/: date.rs  lib.rs  models.rs  numbering.rs  register.rs  reports.rs
crates/swift-bill-db/: Cargo.toml
crates/swift-bill-db/src/: connect.rs  invoices.rs  lib.rs
crates/swift-bill-excel/: Cargo.toml
crates/swift-bill-excel/src/: invoice_submission.rs  lib.rs  receiving_summary.rs
crates/swift-bill-pdf/: Cargo.toml
crates/swift-bill-pdf/src/: cover_letter.rs  cover_letter_template.rs  invoice_submission.rs  lib.rs  receiving_summary.rs  shared.rs
scripts/: gen-icons.cjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  excel.rs  history.rs  lib.rs  main.rs  models.rs  number_locks.rs  numbering.rs  pdf.rs  pdf_template.rs  queries.rs  reports.rs
src/assets/: design-system.css
src/components/: TabHistory.vue  TabNumberLocks.vue  TabQuery.vue  TabReport1.vue  TabReport2.vue  TabReport3.vue  TabSettings.vue  ToastContainer.vue
src/composables/: useToast.ts
