[package]
name = "swift-bill"
version = "0.3.5"
description = "Swift Bill - Hospital Pharmaceutical Disbursement Reports"
authors = ["Suradet Pratomsak"]
edition = "2024"

[lib]
name = "swift_bill"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiberius = { version = "0.12", default-features = false, features = ["rustls", "chrono"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
chrono = { version = "0.4", features = ["serde"] }
printpdf = "0.9.1"
rust_xlsxwriter = "0"
lopdf = "0.32"
ttf-parser = "0.21"
