[package]
name = "swift-bill"
version = "0.3.5"
edition = "2024"
authors = ["Suradet Pratomsak"]
license = "MIT"
description = "Swift Bill - Hospital Pharmaceutical Disbursement Reports (Tauri shell)"

[lib]
name = "swift_bill"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
swift-bill-core = { path = "../crates/swift-bill-core" }
swift-bill-db = { path = "../crates/swift-bill-db" }
swift-bill-excel = { path = "../crates/swift-bill-excel" }
swift-bill-pdf = { path = "../crates/swift-bill-pdf" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
thiserror = "2"
