[package]
name = "swift-bill-pdf"
version = "0.3.5"
edition = "2024"
authors = ["Suradet Pratomsak"]
license = "MIT"
description = "PDF generation via printpdf + lopdf template overlay (Thai CordiaNew font embedded)"

[lints]
workspace = true

[dependencies]
swift-bill-core = { path = "../swift-bill-core" }
printpdf = "0.9.1"
lopdf = "0.43"
ttf-parser = "0.25"
thiserror = "2"
